fix(datepicker): correct z-index of month/year selects (#3473)
This is a minor change that corrects rendering of the focus outline of
the custom select used for month selection.

--- a/src/datepicker/datepicker-navigation-select.scss
+++ b/src/datepicker/datepicker-navigation-select.scss
@@ -3,4 +3,8 @@ ngb-datepicker-navigation-select > .custom-select {
   padding: 0 0.5rem;
   font-size: 0.875rem;
   height: 1.85rem;
+
+  &:focus {
+    z-index: 1;
+  }
 }
